front-end/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      k: front-end
  template:
    metadata:
      labels:
        k: front-end
      annotations:
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: front-end
        image: manarabdulrahman/sock-front-end
        resources:
        ports:
        - containerPort: 8079
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    k: front-end
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8079
  selector:
    k: front-end
